# POSIX-queue-example

./: CMakeLists.txt  MessageQueue.cpp  MessageQueue.h  README.md  main.cpp
MessageQueueLib/: CMakeLists.txt
MessageQueueLib/sources/: MessageQueue.cpp
client/: CMakeLists.txt  main.cpp
server/: CMakeLists.txt  main.cpp
